# traclm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  piccolo_conf.py  pyproject.toml  run.py
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
apps/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
apps/web/src/: App.jsx
apps/web/src/api/: apiKeys.ts  auth.ts  client.ts  projects.ts  traces.ts
apps/web/src/components/common/: ErrorBoundary.jsx  Layout.jsx
apps/web/src/contexts/: AuthContext.jsx
apps/web/src/pages/: ApiKeys.jsx  Dashboard.jsx  Login.jsx  NotFound.jsx  Projects.jsx  Register.jsx  TraceDetail.jsx  Traces.jsx
apps/web/src/types/: index.ts
examples/: basic_usage.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: ApiKeys.jsx  Dashboard.jsx  Login.jsx  Projects.jsx  Register.jsx  TraceDetail.jsx  Traces.jsx
src/llm_tracer/: __init__.py  config.py  main.py  piccolo_conf.py
src/llm_tracer/api/: __init__.py  auth.py  routes.py  schemas.py
src/llm_tracer/db/: __init__.py  piccolo_app.py  tables.py
src/llm_tracer/templates/: api_keys.html  base.html  base_dashboard.html  dashboard.html  index.html  login.html  projects.html  register.html  trace_detail.html  traces_list.html
src/llm_tracer_sdk/: README.md  __init__.py  callback.py  client.py  context.py  instrumentation.py  sdk.py
tests/: __init__.py  conftest.py  test_api.py  test_callback.py  test_client.py  test_context.py  test_instrumentation.py  test_piccolo_conf.py  test_sdk.py  test_tables.py
